--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="350dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="TextView"
+        tools:text="كيروش يرفض إجراء تعديلات على تشكيل منتخب مصر فى مباراتىّ ليبيا - اليوم السابع"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,13 +36,14 @@
     <TextView
         android:id="@+id/description"
         android:layout_width="0dp"
+        android:textSize="18sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:text="اتفق البرتغالى نيلو فينجادا المدير الفنى لاتحاد الكرة، مع مواطنه كارلوس كيروش المدير الفنى الجديد لمنتخب مصر على عدم إجراءات تعديلات كبيرة فى تشكيل المنتخب فى مباراتىّ ليبيا" />
 </androidx.constraintlayout.widget.ConstraintLayout>
